--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build" : "tsc -w",
-    "start" : "node ./dist/app.js"
+    "build": "tsc -w",
+    "start": "nodemon ./dist/app.js"
   },
-  "author": "",
+  "author": "Ken Ng",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@types/node": "^22.10.1"
+    "@types/node": "^22.10.1",
+    "nodemon": "^3.1.7"
   }
 }
